@@ -3,6 +3,7 @@ xxxx-xx-xx: 0.3.1
 
 Bugfixes:
 
+* Don't accept T separator for non-ISO formats in CommonParser.parse_datetime()
 * Don't include doctest and doctrees data in source distributions
 * Fixed incorrect output for doctest blocks
 
